include/Win32/Physics.NewtonImport.hpp

struct TNewtonCollisionInfoRecord;
struct TNewtonUserMeshCollisionCollideDesc;
typedef float *PFloat;
typedef int *PInteger;
typedef void * *PPointer;
typedef void * *PNewtonMesh;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonCollision;
typedef void * *PNewtonFracturedCompoundMeshPart;
struct DECLSPEC_DRECORD TNewtonCollisionInfoRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_offsetMatrix;
	TNewtonCollisionMaterial m_collisionMaterial;
	int m_collisionType;
	int m_collisionUserID;
	
public:
	union
	{
		struct 
		{
			System::StaticArray<float, 64> m_paramArray;
		};
		struct 
		{
			TNewtonSceneCollisionParam shapedataSceneCollision;
		};
		struct 
		{
			TNewtonHeightFieldCollisionParam shapedataHeightField;
		};
		struct 
		{
			TNewtonCollisionTreeParam shapedataTree;
		};
		struct 
		{
			TNewtonCompoundCollisionParam shapedataCompound;
		};
		struct 
		{
			TNewtonDeformableMeshParam m_deformableMesh;
		};
		struct 
		{
			TNewtonConvexHullParam shapedataConvexHull;
		};
		struct 
		{
			TNewtonChamferCylinderParam shapedataChamferCylinder;
		};
		struct 
		{
			TNewtonCylinderParam shapedataCylinder;
		};
		struct 
		{
			TNewtonCapsuleParam shapedataCapsule;
		};
		struct 
		{
			TNewtonSphereParam shapedataSphere;
		};
		struct 
		{
			TNewtonConeParam shapedataCone;
		};
		struct 
		{
			TNewtonBoxParam shapedataBox;
		};
		
	};
};
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
struct DECLSPEC_DRECORD TNewtonUserMeshCollisionCollideDesc
{
public:
	System::StaticArray<float, 4> m_boxP0;
	System::StaticArray<float, 4> m_boxP1;
	System::StaticArray<float, 4> m_boxDistanceTravel;
	int m_threadNumber;
	int m_faceCount;
	int m_vertexStrideInBytes;
	float m_skinThickness;
	void *m_userData;
	void * *m_objBody;
	void * *m_polySoupBody;
	void * *m_objCollision;
	void * *m_polySoupCollision;
	float *m_vertex;
	int *m_faceIndexCount;
	int *m_faceVertexIndex;
};
typedef TNewtonUserMeshCollisionCollideDesc *PNewtonUserMeshCollisionCollideDesc;
typedef TNewtonUserMeshCollisionRayHitDesc *PNewtonUserMeshCollisionRayHitDesc;
typedef void __cdecl (*NewtonSerializeCallback)(const void * serializeHandle, const void * buffer, int size);
typedef NewtonSerializeCallback *PNewtonSerializeCallback;
typedef void __cdecl (*NewtonDeserializeCallback)(const void * serializeHandle, const void * buffer, int size);
typedef void __cdecl (*NewtonOnUserCollisionSerializationCallback)(const void * userData, PNewtonSerializeCallback functionparam, const void * serializeHandle);
typedef void __cdecl (*NewtonUserMeshCollisionDestroyCallback)(const void * userData);
typedef float __cdecl (*NewtonUserMeshCollisionRayHitCallback)(const PNewtonUserMeshCollisionRayHitDesc lineDescData);
typedef void __cdecl (*NewtonUserMeshCollisionGetCollisionInfo)(const void * userData, const PNewtonCollisionInfoRecord infoRecord);
typedef int __cdecl (*NewtonUserMeshCollisionAABBTest)(const void * userData, const PFloat boxP0, const PFloat boxP1);
typedef int __cdecl (*NewtonUserMeshCollisionGetFacesInAABB)(const void * userData, const PFloat p0, const PFloat p1, const PFloat vertexArray, const PInteger vertexCount, const PInteger vertexStrideInBytes, const PInteger indexList, int maxIndexCount, const PInteger userDataList);
typedef void __cdecl (*NewtonUserMeshCollisionCollideCallback)(const PNewtonUserMeshCollisionCollideDesc collideDescData, const void * continueCollisionHandle);
typedef void __cdecl (*NewtonFractureCompoundCollisionOnEmitCompoundFractured)(const PNewtonBody fracturedBody);
typedef void __cdecl (*NewtonFractureCompoundCollisionOnEmitChunk)(const PNewtonBody chunkBody, const PNewtonFracturedCompoundMeshPart fracturexChunkMesh, const PNewtonCollision fracturedCompountCollision);
typedef void __cdecl (*NewtonFractureCompoundCollisionReconstructMainMeshCallBack)(const PNewtonBody body, const PNewtonFracturedCompoundMeshPart mainMesh, const PNewtonCollision fracturedCompountCollision);
//-- var, const, procedure ---------------------------------------------------
#define NEWTON_API L"newton32s.dll"
extern "C" PNewtonCollision __cdecl NewtonCreateCompoundCollision(const PNewtonWorld newtonWorld, int shapeID);
extern "C" PNewtonCollision __cdecl NewtonCreateCompoundCollisionFromMesh(const PNewtonWorld newtonWorld, const PNewtonMesh mesh, float hullTolerance, int shapeID, int subShapeID);
extern "C" void __cdecl NewtonCompoundCollisionBeginAddRemove(const PNewtonCollision compoundCollision);
extern "C" void * __cdecl NewtonCompoundCollisionAddSubCollision(const PNewtonCollision compoundCollision, const PNewtonCollision convexCollision);
extern "C" void __cdecl NewtonCompoundCollisionRemoveSubCollision(const PNewtonCollision compoundCollision, const void * collisionNode);
extern "C" void __cdecl NewtonCompoundCollisionRemoveSubCollisionByIndex(const PNewtonCollision compoundCollision, int nodeIndex);
extern "C" void __cdecl NewtonCompoundCollisionSetSubCollisionMatrix(const PNewtonCollision compoundCollision, const void * collisionNode, const PFloat matrix);
extern "C" void __cdecl NewtonCompoundCollisionEndAddRemove(const PNewtonCollision compoundCollision);
extern "C" void * __cdecl NewtonCompoundCollisionGetFirstNode(const PNewtonCollision compoundCollision);
extern "C" void * __cdecl NewtonCompoundCollisionGetNextNode(const PNewtonCollision compoundCollision, const void * collisionNode);
extern "C" void * __cdecl NewtonCompoundCollisionGetNodeByIndex(const PNewtonCollision compoundCollision, int index);
extern "C" int __cdecl NewtonCompoundCollisionGetNodeIndex(const PNewtonCollision compoundCollision, const void * collisionNode);
extern "C" PNewtonCollision __cdecl NewtonCompoundCollisionGetCollisionFromNode(const PNewtonCollision compoundCollision, const void * collisionNode);
extern "C" PNewtonCollision __cdecl NewtonCreateFracturedCompoundCollision(const PNewtonWorld newtonWorld, const PNewtonMesh solidMesh, int shapeID, int fracturePhysicsMaterialID, int pointcloudCount, const PFloat vertexCloud, int strideInBytes, int materialID, const PFloat textureMatrix, NewtonFractureCompoundCollisionReconstructMainMeshCallBack regenerateMainMeshCallback, NewtonFractureCompoundCollisionOnEmitCompoundFractured emitFracturedCompound, NewtonFractureCompoundCollisionOnEmitChunk emitFracfuredChunk);
extern "C" PNewtonCollision __cdecl NewtonFracturedCompoundPlaneClip(const PNewtonCollision fracturedCompound, const PFloat plane);
extern "C" void __cdecl NewtonFracturedCompoundSetCallbacks(const PNewtonCollision fracturedCompound, NewtonFractureCompoundCollisionReconstructMainMeshCallBack regenerateMainMeshCallback, NewtonFractureCompoundCollisionOnEmitCompoundFractured emitFracturedCompound, NewtonFractureCompoundCollisionOnEmitChunk emitFracfuredChunk);
extern "C" int __cdecl NewtonFracturedCompoundIsNodeFreeToDetach(const PNewtonCollision fracturedCompound, const void * collisionNode);
extern "C" int __cdecl NewtonFracturedCompoundNeighborNodeList(const PNewtonCollision fracturedCompound, const void * collisionNode, const PPointer list, int maxCount);
extern "C" PNewtonFracturedCompoundMeshPart __cdecl NewtonFracturedCompoundGetMainMesh(const PNewtonCollision fracturedCompound);
extern "C" PNewtonFracturedCompoundMeshPart __cdecl NewtonFracturedCompoundGetFirstSubMesh(const PNewtonCollision fracturedCompound);
extern "C" PNewtonFracturedCompoundMeshPart __cdecl NewtonFracturedCompoundGetNextSubMesh(const PNewtonCollision fracturedCompound, const PNewtonFracturedCompoundMeshPart subMesh);
extern "C" int __cdecl NewtonFracturedCompoundCollisionGetVertexCount(const PNewtonCollision fracturedCompound, const PNewtonFracturedCompoundMeshPart meshOwner);
extern "C" PFloat __cdecl NewtonFracturedCompoundCollisionGetVertexPositions(const PNewtonCollision fracturedCompound, const PNewtonFracturedCompoundMeshPart meshOwner);
extern "C" PFloat __cdecl NewtonFracturedCompoundCollisionGetVertexNormals(const PNewtonCollision fracturedCompound, const PNewtonFracturedCompoundMeshPart meshOwner);
extern "C" PFloat __cdecl NewtonFracturedCompoundCollisionGetVertexUVs(const PNewtonCollision fracturedCompound, const PNewtonFracturedCompoundMeshPart meshOwner);
extern "C" int __cdecl NewtonFracturedCompoundMeshPartGetIndexStream(const PNewtonCollision fracturedCompound, const PNewtonFracturedCompoundMeshPart meshOwner, const void * segment, const PInteger index);
extern "C" void * __cdecl NewtonFracturedCompoundMeshPartGetFirstSegment(const PNewtonFracturedCompoundMeshPart fractureCompoundMeshPart);
extern "C" void * __cdecl NewtonFracturedCompoundMeshPartGetNextSegment(const void * fractureCompoundMeshSegment);
extern "C" int __cdecl NewtonFracturedCompoundMeshPartGetMaterial(const void * fractureCompoundMeshSegment);
extern "C" int __cdecl NewtonFracturedCompoundMeshPartGetIndexCount(const void * fractureCompoundMeshSegment);
extern "C" PNewtonCollision __cdecl NewtonCreateSceneCollision(const PNewtonWorld newtonWorld, int shapeID);
extern "C" void __cdecl NewtonSceneCollisionBeginAddRemove(const PNewtonCollision sceneCollision);
extern "C" void * __cdecl NewtonSceneCollisionAddSubCollision(const PNewtonCollision sceneCollision, const PNewtonCollision collision);
extern "C" void __cdecl NewtonSceneCollisionRemoveSubCollision(const PNewtonCollision compoundCollision, const void * collisionNode);
extern "C" void __cdecl NewtonSceneCollisionRemoveSubCollisionByIndex(const PNewtonCollision sceneCollision, int nodeIndex);
extern "C" void __cdecl NewtonSceneCollisionSetSubCollisionMatrix(const PNewtonCollision sceneCollision, const void * collisionNode, const PFloat matrix);
extern "C" void __cdecl NewtonSceneCollisionEndAddRemove(const PNewtonCollision sceneCollision);
extern "C" void * __cdecl NewtonSceneCollisionGetFirstNode(const PNewtonCollision sceneCollision);
extern "C" void * __cdecl NewtonSceneCollisionGetNextNode(const PNewtonCollision sceneCollision, const void * collisionNode);
extern "C" void * __cdecl NewtonSceneCollisionGetNodeByIndex(const PNewtonCollision sceneCollision, int index);
extern "C" int __cdecl NewtonSceneCollisionGetNodeIndex(const PNewtonCollision sceneCollision, const void * collisionNode);
extern "C" PNewtonCollision __cdecl NewtonSceneCollisionGetCollisionFromNode(const PNewtonCollision sceneCollision, const void * collisionNode);
extern "C" PNewtonCollision __cdecl NewtonCreateUserMeshCollision(const PNewtonWorld newtonWorld, const PFloat minBox, const PFloat maxBox, const void * userData, NewtonUserMeshCollisionCollideCallback collideCallback, NewtonUserMeshCollisionRayHitCallback rayHitCallback, NewtonUserMeshCollisionDestroyCallback destroyCallback, NewtonUserMeshCollisionGetCollisionInfo getInfoCallback, NewtonUserMeshCollisionAABBTest getLocalAABBCallback, NewtonUserMeshCollisionGetFacesInAABB facesInAABBCallback, NewtonOnUserCollisionSerializationCallback serializeCallback, int shapeID);
extern "C" int __cdecl NewtonUserMeshCollisionContinuousOverlapTest(const PNewtonUserMeshCollisionCollideDesc collideDescData, const void * continueCollisionHandle, const PFloat minAabb, const PFloat maxAabb);
extern "C" PNewtonCollision __cdecl NewtonCreateCollisionFromSerialization(const PNewtonWorld newtonWorld, NewtonDeserializeCallback deserializeFunction, const void * serializeHandle);
extern "C" void __cdecl NewtonCollisionSerialize(const PNewtonWorld newtonWorld, const PNewtonCollision collision, NewtonSerializeCallback serializeFunction, const void * serializeHandle);
extern "C" void __cdecl NewtonCollisionGetInfo(const PNewtonCollision collision, const PNewtonCollisionInfoRecord collisionInfo);